tests/baselines/reference/mergedInterfacesWithMultipleBases4.errors.txt
mergedInterfacesWithMultipleBases4.ts(19,11): error TS2320: Interface 'A<T>' cannot simultaneously extend types 'C<string>' and 'C<number>'.
  Named property 'a' of types 'C<string>' and 'C<number>' are not identical.


==== mergedInterfacesWithMultipleBases4.ts (1 errors) ====
    // merged interfaces behave as if all extends clauses from each declaration are merged together
    
    class C<T> {
        a: T;
    }
    
    class C2<T> {
        b: T;
    }
    
    class C3<T> {
        c: T;
    }
    
    class C4<T> {
        d: T;
    }
    
    interface A<T> extends C<string>, C3<string> { // error
              ~
!!! error TS2320: Interface 'A<T>' cannot simultaneously extend types 'C<string>' and 'C<number>'.
!!! error TS2320:   Named property 'a' of types 'C<string>' and 'C<number>' are not identical.
        y: T;
    }
    
    interface A<T> extends C<number>, C4<string> {
        z: T;
    }
    
    class D implements A<boolean> {
        a: string;
        b: string;
        c: string;
        d: string;
        y: boolean;
        z: boolean;
    }